<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TV Player</string>
    <string name="settings_title">Settings</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="skip_recap">Skip Recap</string>
    <string name="skip_credits">Skip Credits</string>
    <string name="next_episode">Next Episode</string>
    
    <string name="current_time">Current Time</string>
    <string name="elapsed_time">Elapsed</string>
    <string name="total_time">Total</string>
    <string name="remaining_time">Remaining</string>
    <string name="finish_time">Finish At</string>
    
    <string name="audio_delay">Audio Delay</string>
    <string name="subtitle_delay">Subtitle Delay</string>
    <string name="settings">Settings</string>
    <string name="subtitles">Subtitles</string>
    <string name="playback_speed">Speed</string>
    
    <string name="rewind">Rewind</string> 
    <string name="fast_forward">Fast Forward</string>
    <string name="play_pause">Play/Pause</string>
    
    <string name="more_options">More Options</string>
    
    
    <string name="api_keys_category">API Keys</string>
    <string name="trakt_api_key">Trakt API Key</string>
    <string name="tmdb_api_key">TMDB API Key</string>
    <string name="tvdb_api_key">TVDB API Key</string>
    
    <string name="debrid_category">Debrid Servers</string>
    <string name="real_debrid_key">Real-Debrid API Key</string>
    <string name="torbox_key">TorBox API Key</string>
    <string name="all_debrid_key">AllDebrid API Key</string>
    
    <string name="skip_timings_category">Skip Timings (seconds)</string>
    <string name="intro_start">Intro Start</string>
    <string name="intro_end">Intro End</string>
    <string name="recap_start">Recap Start</string>
    <string name="recap_end">Recap End</string>
    <string name="credits_start">Credits Start</string>
    <string name="credits_end">Credits End</string>
    <string name="next_ep_start">Next Episode Start</string>
    
    <string name="skip_settings_category">Skip Settings</string>
    <string name="auto_skip_intro">Auto Skip Intro</string>
    <string name="auto_skip_recap">Auto Skip Recap</string>
    <string name="auto_skip_credits">Auto Skip Credits</string>
    
    <string name="delay_category">Audio/Subtitle Delay</string>
    <string name="audio_delay_ms">Audio Delay (ms)</string>
    <string name="subtitle_delay_ms">Subtitle Delay (ms)</string>
    
    <string name="error_no_url">No valid video URL provided</string>
    <string name="error_playback">Playback error occurred</string>
</resources>
